[package]
name = "combat_action"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "combat_action"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
readyness = { version = "0.1.10", path = "../../components/readyness", features = ["cpi"] }
name = { version = "0.1.10", path = "../../components/name", features = ["cpi"] }