[package]
name = "combat_tick"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "combat_tick"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
speed = { version = "0.1.10", path = "../../components/speed", features = ["cpi"] }
readyness = { version = "0.1.10", path = "../../components/readyness", features = ["cpi"] }
name = { version = "0.1.10", path = "../../components/name", features = ["cpi"] }